# pagewise

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md  SECURITY.md
docs/reviews/: 2026-07-06-architecture-code-review.md  2026-07-07-architecture-code-review-v3.4.0.md  2026-07-07-bug-hunt-v3.4.2.md  2026-07-17-code-docs-review-v3.5.12.md  2026-07-17-code-docs-review-v3.5.13.md
scripts/: check-secrets.mjs  copy-pdfjs-assets.mjs  generate-app-icon.mjs  sync-version.mjs  verify-bundle-version.mjs
src/: App.css  App.tsx  AppV3.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ocr.rs  pdf.rs  secrets.rs
src/chat/: persist.test.ts  persist.ts
src/components/: AgentDock.tsx  AgentRail.tsx  AnchoredMenu.tsx  AppRail.tsx  ChatSessionsList.tsx  CitationBlock.tsx  CommandPalette.tsx  ConfirmBar.tsx  ContextBar.tsx  DocumentLibrary.tsx  DocumentPreview.tsx  DocumentSearch.tsx  DropOverlay.tsx  EmptyState.tsx  FileErrorBanner.tsx  Icon.tsx  LibraryDrawer.tsx  LoadingOverlay.tsx  LogoMark.tsx  Markdown.test.ts  Markdown.tsx  MessageAssistantFooter.tsx  MessageContent.tsx  PreviewToolbar.tsx  RecentFilesDrawer.tsx  RecentFilesList.tsx  ResizeHandle.tsx  SettingsDrawer.tsx  SettingsForm.tsx  ThreadSelector.tsx  ThumbnailSidebar.tsx  ToastViewport.tsx  WelcomeView.tsx  ZoomStepper.tsx
src/contexts/: ShellContext.tsx
src/document/: index-queue.test.ts  (+2 more)
(+171 files in other folders)
