[package]
name = "pagewise"
version = "0.2.35"
description = "Local desktop document agent — PDF, OCR, page-wise AI analysis"
authors = ["hxddh"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pagewise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf-extract = "0.12.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
tempfile = "3.27.0"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
